# agent-sandbox

./: .gitignore  .gitleaks.toml  .hadolint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  PROVENANCE.md  README.md  pyproject.toml
config/: session-volume-roles.json  trace-events.json
docs/: bind-mode.md  control-plane.md  usage.md
profiles/: README.md  dev-common.json
sandbox/: Dockerfile  audit_sink.py  conntrack.bash  dns-resolver.bash  docker-compose.yml  domain-allowlist.json  egress-rules.bash  expand-allowlist.bash  hardener-entrypoint.bash  init-firewall.bash  ip-validation.bash  launch-marks.bash  launch-trace.bash  seccomp-default.json  squid-config.bash  trace-events.bash  trace.bash
schema/: workload.schema.json
scripts/: gen-trace-events.py
tests/: _helpers.py  _kcov.py  _xplat.py  conftest.py  kcov_gate.py  run-kcov.sh  test_audit_sink.py  test_backend_gates.py  test_bind_validation.py  test_control_plane.py  test_cross_platform_coverage_guard.py  test_egress_quota_rules.py  test_expand_allowlist.py  test_expand_cli.py  test_firewall_conntrack.py  test_firewall_deny_message.py  test_firewall_dns_cache.py  test_firewall_dns_rebind.py  test_firewall_empty_allowlist.py  test_firewall_ipset_acl_coupling.py  test_firewall_ipv4_differential.py  test_firewall_ipv6_differential.py  test_firewall_refresh_supervision.py  test_hardener_entrypoint.py  test_kcov_harness.py  test_launcher.py  test_lifecycle_verbs.py  test_no_claude_residue.py  test_overmounts.py  test_persistent_sessions.py  test_phone_home_extract.py  test_prewarm.py  (+15 more)
(+41 files in other folders)
